# gifboard

./: .gitignore  Cargo.toml  default.nix  download-twitter.mjs  flake.nix  tenor-paste.sh
assets/: gifboard.desktop
gifboard-app/: Cargo.toml
gifboard-app/src/: main.rs
gifboard-core/: Cargo.toml
gifboard-core/src/: .lib.rs.swp  clipboard.rs  config.rs  lib.rs
gifboard-core/src/query/: fetch.rs  klippy.rs  mod.rs
gifboard-qml/: Cargo.toml  build.rs
gifboard-qml/qml/: GifBrowser.qml  PreviewImage.qml  main.qml
gifboard-qml/src/: clipboard.h  clipboard.rs  keysym_to_QTKey.cpp  keysym_to_QTKey.h  lib.rs  myobject.rs  notification.rs  search_results.rs  x11_filter.cpp  x11_filter.h  x11_manager.rs
src/: main.rs
